--- a/regexp_classifier.ipynb
+++ b/regexp_classifier.ipynb
@@ -21,7 +21,7 @@
     "from datetime import datetime\n",
     "import re\n",
     "\n",
-    "from utils import get_full_df"
+    "from data import get_full_df"
    ]
   },
   {
