--- a/naive_bayes_10.ipynb
+++ b/naive_bayes_10.ipynb
@@ -35,17 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "class NaiveBayes:\n",
-    "    def __init__(self, n_gram, classes):\n",
+    "    def __init__(self, n, classes):\n",
     "        \"\"\"\n",
     "        Args:\n",
     "            n (int)\n",
     "        \"\"\"\n",
-    "        self.ngrams = create_ngram(n_gram)\n",
+    "        self.ngrams = create_ngram(n)\n",
     "        self.probs = pd.DataFrame(1, index=np.arange(len(self.ngrams)).tolist(), columns=classes)\n",
     "        self.classes = classes\n",
     "        self.y_prob = {}\n",
@@ -79,26 +79,22 @@
     "                for label in self.classes:\n",
     "                    pred_targets[label] *= self.y_prob[label] * self.probs.loc[idx, label]\n",
     "        \n",
-    "        return pred_targets\n",
+    "        label = max(pred_targets, key=pred_targets.get)\n",
+    "        return label, pred_targets\n",
     "    \n",
-    "    def evaluate(self, dataset):\n",
-    "        accuracy = 0\n",
+    "    def eval(self, dataset):\n",
+    "        correct = 0\n",
     "        errors = []\n",
     "\n",
     "        for idx in tqdm(range(len(dataset))):\n",
     "            text = dataset.iloc[idx][\"destination\"]\n",
     "            target = dataset.iloc[idx][\"code\"]\n",
-    "\n",
-    "            preds = model(text)\n",
-    "            label = max(preds, key=preds.get)\n",
-    "\n",
-    "            if label == target: accuracy += 1\n",
+    "            label, _ = model(text)\n",
+    "            if label == target: correct += 1\n",
     "            else: errors.append((text, target, label))\n",
-    "\n",
-    "\n",
-    "        accuracy = accuracy / len(dataset)\n",
+    "        \n",
+    "        accuracy = correct / len(dataset)\n",
     "        print(f\"Accuracy: {accuracy} | Errors: {len(errors)}\")\n",
-    "\n",
     "        return accuracy, errors\n",
     "    \n",
     "    def __call__(self, text): return self.predict(text)"
@@ -108,22 +104,14 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'SEED': 42}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_df, test_df = get_train_test_split(\"10_ports.csv\", transform=regexp_processing)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,8 +121,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 198/198 [00:00<00:00, 346.21it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = NaiveBayes(n=3, classes=classes)\n",
+    "\n",
+    "model.fit(train_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('FRBOD',\n",
+       " {'FRBES': 1.4106079448666397e-28,\n",
+       "  'ESSDR': 4.568594177924848e-33,\n",
+       "  'NLRTM': 6.831159488795196e-33,\n",
+       "  'BEANR': 4.550579621504121e-32,\n",
+       "  'FRLEH': 1.842595329337412e-31,\n",
+       "  'FRSML': 1.1726887202057273e-30,\n",
+       "  'ESBIO': 2.8097637431585894e-30,\n",
+       "  'FRMTX': 2.4276057389413426e-29,\n",
+       "  'FRIRK': 1.1806397881036805e-28,\n",
+       "  'FRBOD': 1.005525389035068e-27})"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model(\"RADE DE BREST\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
