--- a/notebooks/linear_model.ipynb
+++ b/notebooks/linear_model.ipynb
@@ -1,174 +1,36 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### TODOs\n",
-    "\n",
-    "- [x] Compute accuracy and total loss in training loop \n",
-    "- [x] At the end of training, plot losses and accuracies to pick a stopping epoch"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import string \n",
     "import numpy as np\n",
-    "from data import get_train_test_split\n",
-    "from tqdm import tqdm \n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from models.linear import Linear\n",
+    "from src.data import get_train_test_split, regexp_processing\n",
+    "from src.criterion import get_recall\n",
+    "from src.constants import constants\n",
+    "CLASSES = constants['classes']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Linear:\n",
-    "    \"\"\"\n",
-    "    Linear model\n",
-    "    Args:\n",
-    "        classes (list): list of possible labels\n",
-    "        max_len (int): maximum length of input sequence (destination)\n",
-    "        vocab_size (int): number of characters in the vocabulary\n",
-    "    \"\"\"\n",
-    "    def __init__(self, classes, max_len):\n",
-    "        self.classes = classes\n",
-    "        self.vocab = self.build_vocab()\n",
-    "        self.max_len = max_len\n",
-    "        \n",
-    "        self.w = np.ones((len(classes), max_len * len(self.vocab)))\n",
-    "        self.b = np.ones((len(classes), 1))\n",
-    "        \n",
-    "    \n",
-    "    def build_vocab(self):\n",
-    "        all_char = string.printable\n",
-    "        vocab = { \"\": 0, \" \": 1}\n",
-    "        idx = 2\n",
-    "        for c in all_char:\n",
-    "            vocab[c] = idx\n",
-    "            idx += 1\n",
-    "        return vocab\n",
-    "    \n",
-    "    def encode(self, text):\n",
-    "        \"\"\"\n",
-    "        Return a one hot encoded vector along one dimension (all characters are concatenated)\n",
-    "        \"\"\"\n",
-    "        text = text.lower()\n",
-    "        token_idx = [self.vocab[c] for c in text]\n",
-    "        # insert padding for fixed length inputs\n",
-    "        token_idx += [0] * (self.max_len-len(token_idx))\n",
-    "        \n",
-    "        # convert into one hot encoded vector and concatenate along one dimension\n",
-    "        token = 0\n",
-    "        for i in token_idx:\n",
-    "            one_hot_encoded_vector = np.zeros((len(self.vocab), 1))\n",
-    "            one_hot_encoded_vector[i][0] = 1\n",
-    "            if type(token) == int: token = one_hot_encoded_vector \n",
-    "            else: token = np.concatenate((token, one_hot_encoded_vector), axis=0)\n",
-    "        return token\n",
-    "    \n",
-    "    def __call__(self, text):\n",
-    "        x = self.encode(text)\n",
-    "        preds = np.dot(self.w, x) + self.b\n",
-    "        preds = preds.flatten()\n",
-    "        preds = self.softmax(preds)\n",
-    "        idx_pred_max = preds.index(max(preds))\n",
-    "        labels = {}\n",
-    "        for i in range(len(self.classes)):\n",
-    "            labels[self.classes[i]] = preds[i]\n",
-    "        return self.classes[idx_pred_max], labels\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def softmax(array):\n",
-    "        denominator = sum([np.exp(i) for i in array])\n",
-    "        return [np.exp(i) / denominator for i in array]\n",
-    "    \n",
-    "    def fit(self, dataset, epochs=1, batch_size=1, lr=0.1):\n",
-    "        \"\"\"\n",
-    "        Implement stochastic gradient descent to estimate w and b parameters\n",
-    "        Args:\n",
-    "            dataset (pd.DataFrame): train dataset with columns \"destination\" and \"code\"\n",
-    "        \"\"\"\n",
-    "        losses = []\n",
-    "        accuracies = []\n",
-    "        for epoch in range(epochs):\n",
-    "            total_loss = 0\n",
-    "            accuracy = 0\n",
-    "            \n",
-    "            for i in range(len(dataset)):\n",
-    "                text = dataset.iloc[i][\"destination\"]\n",
-    "                x = self.encode(text)\n",
-    "                target = dataset.iloc[i][\"code\"]\n",
-    "                \n",
-    "                y_true = np.zeros((len(self.classes), 1))\n",
-    "                y_true[self.classes.index(target)][0] = 1\n",
-    "                y_pred = np.dot(self.w, x) + self.b\n",
-    "                \n",
-    "                denominator = sum([np.exp(i) for i in y_pred.tolist()])\n",
-    "                for i in range(y_pred.size):\n",
-    "                    y_pred[i][0] = np.exp(y_pred[i][0]) / denominator\n",
-    "\n",
-    "                # compute gradient and update parameters\n",
-    "                dw = -np.dot(y_true - y_pred, np.transpose(x))\n",
-    "                db = - (y_true - y_pred)\n",
-    "\n",
-    "                self.w -= lr * dw\n",
-    "                self.b -= lr * db\n",
-    "                \n",
-    "                total_loss += np.sum((y_true - y_pred)**2)\n",
-    "                if np.argmax(y_pred) == np.argmax(y_true): accuracy += 1\n",
-    "            \n",
-    "            accuracy /= len(dataset)\n",
-    "            losses.append(total_loss)\n",
-    "            accuracies.append(accuracy)\n",
-    "            print(f\"Epoch: {epoch+1}/{epochs} | Accuracy: {accuracy} | Loss: {total_loss}\")\n",
-    "        \n",
-    "        \n",
-    "        plt.rcParams['figure.figsize'] = [10, 4]\n",
-    "        plt.rcParams['figure.dpi'] = 100\n",
-    "        fig, ax = plt.subplots(1,2)\n",
-    "        sns.lineplot(range(epochs), losses, ax=ax[0]).set(title=\"Loss\", xlabel=\"Epoch\")\n",
-    "        sns.lineplot(range(epochs), accuracies, ax=ax[1]).set(title=\"Accuracy\", xlabel=\"Epoch\")\n",
-    "        fig.show()\n",
-    "        return losses, accuracies\n",
-    "\n",
-    "    def eval(self, dataset):\n",
-    "        corrects = 0\n",
-    "        errors = []\n",
-    "        \n",
-    "        for i in tqdm(range(len(dataset))):\n",
-    "            text = dataset.iloc[i][\"destination\"]\n",
-    "            target = dataset.iloc[i][\"code\"]\n",
-    "            \n",
-    "            pred, _ = self(text)\n",
-    "            if pred == target: corrects += 1\n",
-    "            else: errors.append((text, target, pred))\n",
-    "        \n",
-    "        return corrects / len(dataset), errors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "train, test = get_train_test_split()\n",
-    "classes = train[\"code\"].unique().tolist()\n",
-    "\n",
-    "model = Linear(classes=classes, max_len=40)"
+    "model = Linear(classes=CLASSES, max_len=40)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +58,17 @@
       "Epoch: 19/20 | Accuracy: 1.0 | Loss: 0.559398572489345\n",
       "Epoch: 20/20 | Accuracy: 1.0 | Loss: 0.49541602228608583\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "losses, accuracies = model.fit(train, epochs=20, lr=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
@@ -205,7 +77,8 @@
       "  FutureWarning\n",
       "/home/achraf/.local/lib/python3.6/site-packages/seaborn/_decorators.py:43: FutureWarning: Pass the following variables as keyword args: x, y. From version 0.12, the only valid positional argument will be `data`, and passing other arguments without an explicit keyword will result in an error or misinterpretation.\n",
       "  FutureWarning\n",
-      "/home/achraf/.local/lib/python3.6/site-packages/ipykernel_launcher.py:107: UserWarning: Matplotlib is currently using module://ipykernel.pylab.backend_inline, which is a non-GUI backend, so cannot show the figure.\n"
+      "/home/achraf/.local/lib/python3.6/site-packages/ipykernel_launcher.py:6: UserWarning: Matplotlib is currently using module://ipykernel.pylab.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "  \n"
      ]
     },
     {
@@ -222,7 +95,32 @@
     }
    ],
    "source": [
-    "losses, accuracies = model.fit(train, epochs=20, lr=0.1)"
+    "plt.rcParams['figure.figsize'] = [10, 4]\n",
+    "plt.rcParams['figure.dpi'] = 100\n",
+    "fig, ax = plt.subplots(1,2)\n",
+    "sns.lineplot(range(20), losses, ax=ax[0]).set(title=\"Loss\", xlabel=\"Epoch\")\n",
+    "sns.lineplot(range(20), accuracies, ax=ax[1]).set(title=\"Accuracy\", xlabel=\"Epoch\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.76, 0.8, 0.82)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_recall(model, test)"
    ]
   },
   {
